--- a/test.html
+++ b/test.html
@@ -2,18 +2,34 @@
 <html>
 
 <head>
-    <title>Vehicle Information</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>LowGroupCars</title>
 </head>
 
 <body style="text-align: center">
+
+    <nav class="navbar">
+        <h1>LowGroupCars</h1>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+    </nav>
+
     <div style="padding-top: 10px;">
-        <label>Enter Vehicle Registration:</label>
-        <input id="inputReg" type="text">
-        <button id="btnSubmit" onclick="submitReg()">Submit</button>
+        <h2>Enter Vehicle Registration:</h2> <br>
+        <input id="inputReg" type="text"><br>
+        <button id="btnSubmit" onclick="submitReg()">continue ></button>
     </div>
+    <hr class="separator">
+
     <div id="errorMessage" style="color: red; padding-top: 10px; display: none;">
         Please try again. Invalid registration number.
     </div>
+
     <div style="padding-top: 25px;">
         <div>
             <label id="lblRegistration"></label>
